--- a/views/teams.handlebars
+++ b/views/teams.handlebars
@@ -1,5 +1,9 @@
 
-<h5>There are {{data.teamsAmount}} teams</h5>
+<div id="first-container">
+    <h5>There are {{data.teamsAmount}} teams</h5>
+    <a href="/team/new"><button type="button" class="btn btn-primary">Add Team</button></a>
+</div>
+
 <div id="table-container">
     <table class="table" id="table">
         <thead>
