i add functionality to edit teams

--- a/views/teams.handlebars
+++ b/views/teams.handlebars
@@ -20,7 +20,7 @@
                 <td>{{team.name}}</td>
                 <td> 
                     <a href='/team/{{team.tla}}/watch'>watch,</a>  
-                    <a href="">edit,</a>  
+                    <a href="/team/{{team.tla}}/edit">edit,</a>  
                     <a href="">remove</a> 
                 </td>
             </tr>
