i add functionality to delete a team

--- a/views/teams.handlebars
+++ b/views/teams.handlebars
@@ -21,7 +21,7 @@
                 <td> 
                     <a href='/team/{{team.tla}}/watch'>watch,</a>  
                     <a href="/team/{{team.tla}}/edit">edit,</a>  
-                    <a href="">remove</a> 
+                    <a href="/team/{{team.tla}}/delete">remove</a> 
                 </td>
             </tr>
             {{/each}}
