--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -1,15 +1,25 @@
 <div id="team-container">
-    <div class="card" style="width: 18rem;">
-  <img src="{{data.image}}" class="card-img-top" alt="{{data.name}}-image">
-  <div class="card-body">
-    <h5 class="card-title" id="card-title">{{data.name}}</h5>
+  <div class="card" style="width: 18rem;">
+    <img src="{{data.image}}" class="card-img-top" alt="{{data.name}}-image">
+    <div class="card-body">
+      <h5 class="card-title" id="card-title">{{data.name}}</h5>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item"> <b>Country:</b> {{data.country}}</li>
+      <li class="list-group-item"> <b>Address:</b> {{data.address}}</li>
+      <li class="list-group-item"> <b>Website:</b> {{data.website}}</li>
+      <li class="list-group-item"> <b>Founded:</b> {{data.founded}}</li>
+      <li class="list-group-item"> <b>Venue:</b> {{data.venue}}</li>
+      <li class="list-group-item">
+        <div id="container-buttons">
+          <a href="/team/{{data.tla}}/edit"><button type="button" class="btn btn-info">Edit</button></a> 
+          <a href="/team/{{data.tla}}/delete"><button type="button" class="btn btn-danger">Delete</button></a> 
+        </div>
+      </li>
+    </ul>
   </div>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item"> <b>Country:</b> {{data.country}}</li>
-    <li class="list-group-item"> <b>Address:</b> {{data.address}}</li>
-    <li class="list-group-item"> <b>Website:</b> {{data.website}}</li>
-    <li class="list-group-item"> <b>Founded:</b> {{data.founded}}</li>
-    <li class="list-group-item"> <b>Venue:</b> {{data.venue}}</li>
-  </ul>
-</div>
 
+
+  <div id="container-back-button">
+    <a href="/"><button type="button" class="btn btn-light">Back</button></a>
+  </div>
