--- a/views/deleteTeam.handlebars
+++ b/views/deleteTeam.handlebars
@@ -1,3 +1,4 @@
+
 <div id="team-container">
     <div class="card" style="width: 18rem;">
   <img src="{{data.image}}" class="card-img-top" alt="{{data.name}}-image">
@@ -14,9 +15,14 @@
 </div>
 
 <form action="/team/{{data.tla}}/delete" method="POST">
-  <h4>are you sure you want to delete the team?</h4>
 
-  <button type="submit">Confirm</button>
+  <div class="alert alert-danger" role="alert">
+   Are you sure you want to delete the team?
+  </div>
+
+  <button type="button" class="btn btn-danger">Yes, delete</button>
 </form>
 
-<button>Back</button>
+<div id="container-back-button">
+    <a href="/"><button type="button" class="btn btn-light">Back</button></a> 
+</div>
