--- a/views/editTeam.handlebars
+++ b/views/editTeam.handlebars
@@ -1,3 +1,4 @@
+<h1 style="color: rgb(25, 139, 201);">Edit Team</h1>
 
 <form action="/team/{{data.tla}}/edit" method="POST" enctype="multipart/form-data">
 
@@ -32,15 +33,22 @@
     </div>
 
     <div class="mb-3">
-        <label for="image" class="form-label">Image</label>
-        <img src={{data.image}} alt="">
+        <div id="container-editTeam-image">
+            <label for="image" class="form-label">Image</label>
+            <img src={{data.image}} alt="" id="editTeam-image">
+        </div>
         <input type="file" class="form-control" name="image">
     </div>
 
     <button type="submit" class="btn btn-primary" name="submit">Submit</button>
 </form>
 
+<div id="container-back-button">
+    <a href="/"><button type="button" class="btn btn-light">Back</button></a> 
+</div>
 
 {{#if data.message}}
-<h5 id="success-message">{{data.message}}</h5>
+<div class="alert alert-success" role="alert">
+  {{data.message}}
+</div>
 {{/if}}
