fix delete button functionality

--- a/views/deleteTeam.handlebars
+++ b/views/deleteTeam.handlebars
@@ -20,7 +20,7 @@
    Are you sure you want to delete the team?
   </div>
 
-  <button type="button" class="btn btn-danger">Yes, delete</button>
+  <button type="submit" class="btn btn-danger">Yes, delete</button>
 </form>
 
 <div id="container-back-button">
