add functionality to reset teams

--- a/views/teams.handlebars
+++ b/views/teams.handlebars
@@ -2,6 +2,9 @@
 <div id="first-container">
     <h5>There are {{data.teamsAmount}} teams</h5>
     <a href="/team/new"><button type="button" class="btn btn-primary">Add Team</button></a>
+    <form action="/" method="POST">
+        <button type="submit" class="btn btn-secondary">Reset Teams</button>
+    </form>
 </div>
 
 <div id="table-container">
